apps/usenet/radarr/networkpolicies/ingress-radarr.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-radarr
  namespace: usenet
spec:
  selector: app == 'radarr'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        ports:
          - 7878
    - action: Allow
      protocol: TCP
      source:
        selector: app == 'ombi'
      destination:
        ports:
          - 7878
