apps/usenet/radarr/networkpolicies/traefik-egress-radarr.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: traefik-egress-radarr
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'usenet'
        selector: app == 'radarr'
        ports:
          - 7878
